@@ -46,6 +46,8 @@ documents those changes that are of interest to users and admins.
     step's --no-kill option, by default the step is killed (previously the 
     job step remained running even without the --no-kill option).
  -- Fix bug in logic to remove whitespace from plugstack.conf.
+ -- Add new configuration parameter SallocDefaultCommand to control what 
+    shell that salloc launches by default.
 
 * Changes in SLURM 1.3.8
 ========================
